--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-nextjs-app",
+  "name": "outfitsave",
   "version": "0.1.0",
   "private": true,
+  "description": "A fashion app where users can save and organize their outfits",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "npx prisma migrate deploy || [ \"$DATABASE_URL\" = \"prisma+postgres://accelerate.prisma-data.net/?api_key=API_KEY\" ] && next build",
