--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test:prod": "playwright test --config=playwright.config.prod.ts --headed",
     "test:prod:ui": "playwright test --config=playwright.config.prod.ts --ui",
     "test:prod:headed": "playwright test --config=playwright.config.prod.ts --headed",
-    "db:reset": "./scripts/reset-db.sh"
+    "db:reset": "./scripts/reset-db.sh",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -43,19 +45,31 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3",
     "@playwright/test": "^1.48.0",
+    "@storybook/addon-a11y": "^9.1.0",
+    "@storybook/addon-docs": "^9.1.0",
+    "@storybook/addon-onboarding": "^9.1.0",
+    "@storybook/addon-vitest": "^9.1.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "eslint-plugin-storybook": "^9.1.0",
     "postcss": "^8",
     "prisma": "^6.3.1",
+    "storybook": "^9.1.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@storybook/nextjs-vite": "^9.1.0",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.54.2",
+    "@vitest/coverage-v8": "^3.2.4"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed.ts"
