--- a/package.json
+++ b/package.json
@@ -52,24 +52,24 @@
     "@storybook/addon-docs": "^9.1.0",
     "@storybook/addon-onboarding": "^9.1.0",
     "@storybook/addon-vitest": "^9.1.0",
+    "@storybook/nextjs-vite": "^9.1.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-storybook": "^9.1.0",
+    "playwright": "^1.54.2",
     "postcss": "^8",
     "prisma": "^6.3.1",
     "storybook": "^9.1.0",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^9.1.0",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.54.2",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   },
   "prisma": {
     "seed": "npx tsx prisma/seed.ts"
