--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@vercel/blob": "^1.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
-    "next": "15.1.7",
-    "next-auth": "^4.24.11",
+    "next": "^15.4.5",
+    "next-auth": "^4.24.7",
     "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
