--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # testing
 /coverage
+/test-results
 
 # next.js
 /.next/
@@ -48,4 +49,3 @@ next-env.d.ts
 *storybook.log
 storybook-static
 
-./test-results/*
