--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate --no-engine",
-    "test": "playwright test --headed && npm run db:cleanup-after-tests",
-    "test:ui": "playwright test --ui && npm run db:cleanup-after-tests",
-    "test:debug": "playwright test --debug && npm run db:cleanup-after-tests",
-    "test:prod": "playwright test --config=playwright.config.prod.ts --headed && npm run db:cleanup-after-tests",
+    "test": "playwright test --headed && npm run db:cleanup:outfits",
+    "test:ui": "playwright test --ui && npm run db:cleanup:outfits",
+    "test:debug": "playwright test --debug && npm run db:cleanup:outfits",
+    "test:prod": "playwright test --config=playwright.config.prod.ts --headed && npm run db:cleanup:outfits",
     "db:reset": "./scripts/reset-db.sh",
     "db:cleanup": "npx tsx scripts/cleanup-test-data.ts",
-    "db:cleanup-after-tests": "npx tsx scripts/cleanup-after-tests.ts",
+    "db:cleanup:outfits": "npx tsx scripts/delete-test-outfits.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
