--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,24 @@
 # Use the Prisma Postgres integration from Vercel Marketeplace to automatically connect a Prisma Postgres instance
 # Or manually run `npx prisma init --db` to create a Prisma Postgres and manually set the `DATABASE_URL` below
-DATABASE_URL="prisma+postgres://accelerate.prisma-data.net/?api_key=PRISMA_POSTGRES_API_KEY"
+DATABASE_URL"
 
 # Create a random 32-character string or run `npx auth secret` to obtain one and set it as the `AUTH_SECRET` below
-AUTH_SECRET="RANDOM_32_CHARACTER_STRING"
+AUTH_SECRET
+
+
+# Local Development Environment
+DATABASE_URL
+
+# Auth Configuration
+AUTH_SECRET
+NEXTAUTH_SECRET
+
+# Google OAuth (for local development)
+GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET
+
+# Vercel Blob Storage (for local development)
+BLOB_READ_WRITE_TOKEN
+
+# Environment
+NODE_ENV
