--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx prisma generate --no-engine",
-    "test": "playwright test --headed && npm run db:cleanup:outfits",
-    "test:ui": "playwright test --ui && npm run db:cleanup:outfits",
-    "test:debug": "playwright test --debug && npm run db:cleanup:outfits",
-    "test:prod": "playwright test --config=playwright.config.prod.ts --headed && npm run db:cleanup:outfits",
+    "test": "playwright test --headed",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:prod": "playwright test --config=playwright.config.prod.ts --headed",
     "db:reset": "./scripts/reset-db.sh",
     "db:cleanup:outfits": "npx tsx scripts/delete-test-outfits.ts",
     "db:start": "chmod +x scripts/start-db.sh && ./scripts/start-db.sh",
