--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:debug": "playwright test --debug",
     "test:prod": "playwright test --config=playwright.config.prod.ts --headed",
     "db:reset": "./scripts/reset-db.sh",
+    "db:deploy:prod": "./scripts/deploy-prod-schema.sh",
     "db:cleanup:outfits": "npx tsx scripts/delete-test-outfits.ts",
     "db:start": "chmod +x scripts/start-db.sh && ./scripts/start-db.sh",
     "db:wait": "npx wait-on tcp:5432",
