--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:reset": "./scripts/reset-db.sh",
     "db:deploy:prod": "./scripts/deploy-prod-schema.sh",
     "db:cleanup:outfits": "npx tsx scripts/delete-test-outfits.ts",
+    "db:cleanup:prod:outfits": "./scripts/cleanup-prod-test-outfits.sh",
     "db:start": "chmod +x scripts/start-db.sh && ./scripts/start-db.sh",
     "db:wait": "npx wait-on tcp:5432",
     "storybook": "storybook dev -p 6006",
