--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Run Playwright tests
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          NEXTAUTH_SECRET=: ${{ secrets.NEXTAUTH_SECRET }}
         run: npx playwright test
       - uses: actions/upload-artifact@v4
         if: always()
